- Resolved issue of links to studies opening in separate tabs - Revised link colors to have better contrast - Made sitewide sizes 0.1 smaller to better match other reputable webpage baseline sizes - Made all table dark mode borders darker for less eye strain - Searched any pure "white" colors and changed to #f9f9f9

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -20,17 +20,16 @@
   --ifm-h4-font-size: 1.25rem;
   --ifm-h5-font-size: 1.25rem;
   --ifm-code-font-size: 95%;
-  --ifm-link-color: var(--ifm-color-primary);
-  --ifm-link-hover-color: var(--ifm-color-primary-dark);
+  --ifm-link-color: #2482a1;
+  --ifm-link-hover-color: #3a95b3;
   --ifm-link-active-color: var(--ifm-color-primary-darker);
-  --ifm-link-visited-color: #800080;
   --ifm-footer-link-color: #f9f9f9;
   --ifm-footer-link-hover-color: #c4c4c4;
-  --ifm-menu-color: #0b1215;
-  --ifm-menu-color-active: var(--ifm-color-primary);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --font-color: #0b1215;
   --font-color-inverse: #efefef;
+  --ifm-menu-color: var(--font-color);
+  --ifm-menu-color-active: var(--ifm-color-primary);
   --sidebar-background-color: #efefef;
   --sidebar-text-color: #0b1215;
 }
@@ -45,13 +44,14 @@
   --ifm-color-primary-lighter: #e7eef0;
   --ifm-color-primary-lightest: #ffffff;
   --ifm-background-color-theme: #191919;
-  --ifm-link-visited-color: #800080;
+  --ifm-link-color: var(--ifm-color-primary-darkest);
+  --ifm-link-hover-color: var(--ifm-color-primary-dark);
   --ifm-footer-link-color: #ccc9c9;
   --ifm-footer-link-hover-color: #858585;
-  --ifm-menu-color: #ccc9c9;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
   --font-color: #ccc9c9;
   --font-color-inverse: #0b1215;
+  --ifm-menu-color-active: var(--ifm-color-primary-dark);
   --sidebar-background-color: #121212;
   --sidebar-text-color: #ccc9c9;
 }
@@ -69,15 +69,23 @@
 /* right sidebar navigation*/
 .table-of-contents__link {
   font-family: "Roboto", sans-serif;
-  font-size: clamp(0.9rem, 2vw, 1.1rem);
+  font-size: clamp(0.8rem, 2vw, 1.0rem);
   color: var(--font-color);
 }
 
 .table-of-contents__link:hover {
+  color: #3a95b3;
+}
+
+[data-theme="dark"] .table-of-contents__link:hover {
   color: var(--ifm-color-primary-dark);
 }
 
 .table-of-contents__link--active {
+  color: #2482a1;
+}
+
+[data-theme="dark"] .table-of-contents__link--active {
   font-weight: bold;
   color: var(--ifm-color-primary-darkest);
 }
@@ -222,7 +230,7 @@
 .markdown li,
 p {
   font-family: "Roboto", sans-serif;
-  font-size: clamp(0.9rem, 2vw, 1.1rem);
+  font-size: clamp(0.8rem, 2vw, 1.0rem);
 }
 
 blockquote {
