--- a/src/css/table-reference.css
+++ b/src/css/table-reference.css
@@ -1,4 +1,4 @@
 .table-reference {
   font-family: "Roboto", sans-serif;
-  font-size: clamp(0.9rem, 2.0vw, 1.1rem);
+  font-size: clamp(0.8rem, 2vw, 1.0rem);
 }
