--- a/src/css/table-vertical-left-align.css
+++ b/src/css/table-vertical-left-align.css
@@ -1,7 +1,7 @@
 .table-caption {
   max-width: 100%;
   font-family: "Roboto", sans-serif;
-  font-size: clamp(0.7rem, 2.0vw, 0.9rem);
+  font-size: clamp(0.7rem, 2vw, 0.9rem);
   font-style: italic;
   color: gray;
   text-align: left;
@@ -33,12 +33,19 @@
 .static-table-vertical-partial-left th,
 .static-table-vertical-partial-left td {
   font-family: "Roboto", sans-serif;
-  font-size: clamp(0.9rem, 2.0vw, 1.1rem);
+  font-size: clamp(0.8rem, 2vw, 1.0rem);
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 5px;
   text-align: left;
   white-space: normal;
   box-sizing: border-box;
+}
+
+[data-theme="dark"] .static-table-vertical-full-left th,
+[data-theme="dark"] .static-table-vertical-full-left td,
+[data-theme="dark"] .static-table-vertical-partial-left th,
+[data-theme="dark"] .static-table-vertical-partial-left td {
+  border: 1px solid #2c3032;
 }
 
 .static-table-vertical-partial-left th,
