--- a/src/css/table-vertical.css
+++ b/src/css/table-vertical.css
@@ -33,14 +33,21 @@
 .static-table-vertical-partial th,
 .static-table-vertical-partial td {
   font-family: "Roboto", sans-serif;
-  font-size: clamp(0.9rem, 2vw, 1.1rem);
+  font-size: clamp(0.8rem, 2vw, 1.0rem);
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 5px;
   text-align: center;
   width: 1%;
   min-width: 0;
   white-space: normal;
   box-sizing: border-box;
+}
+
+[data-theme="dark"] .static-table-vertical-full th,
+[data-theme="dark"] .static-table-vertical-full td,
+[data-theme="dark"] .static-table-vertical-partial th,
+[data-theme="dark"] .static-table-vertical-partial td {
+  border: 1px solid #2c3032;
 }
 
 .static-table-vertical-partial th,
