--- a/src/css/version-selector.css
+++ b/src/css/version-selector.css
@@ -5,7 +5,7 @@
 .version-selector-dropdown {
   padding: 5px 10px;
   font-family: "Roboto", sans-serif;
-  font-size: clamp(0.9rem, 2.0vw, 1.1rem);
+  font-size: clamp(0.8rem, 2vw, 1.0rem);
   color: var(--font-color);
   border-radius: 4px;
   border: 1px solid #ccc;
@@ -21,12 +21,12 @@
 
 .version-selector-option {
   padding: 8px;
-  font-size: clamp(0.9rem, 2.0vw, 1.1rem);
+  font-size: clamp(0.8rem, 2vw, 1.0rem);
   color: var(--font-color);
   background-color: var(--ifm-background-color-theme);
 }
 
 .loading-message {
-  font-size: clamp(0.9rem, 2.0vw, 1.1rem);
+  font-size: clamp(0.8rem, 2vw, 1.0rem);
   color: #999;
 }
